libs/updraft_replay/src/snapshots/updraft_replay__replay__tests__converts_igc_fixes_to_nmea_events.snap
---
source: libs/updraft_replay/src/replay.rs
expression: first_payload
---
$GPRMC,134749.000,A,5200.00000,N,00700.00000,E,,,040726,,,*24
$GPGGA,134749.000,5200.00000,N,00700.00000,E,1,,,956,M,44,M,,*74
$PGRMZ,10000,f,3*1A
