libs/updraft_replay/src/snapshots/updraft_replay__replay__tests__emits_all_i_defined_flight_extensions_in_sentence_order.snap
---
source: libs/updraft_replay/src/replay.rs
expression: "payload_text(&replay.events()[0])"
---
$GPRMC,134749.000,A,5200.00000,N,00700.00000,E,99.99999999999999,271,040726,,,*3E
$GPGGA,134749.000,5200.00000,N,00700.00000,E,1,9,,956,M,44,M,,*4D
$PGRMZ,10000,f,3*1A
$PLXVS,-12.3,,,3048,*51
$LXWP0,,360,3048,1.23,,,,,,,,*07
