libs/updraft_replay/src/snapshots/updraft_replay__replay__tests__emits_lxwp1_with_empty_recorder_identification.snap
---
source: libs/updraft_replay/src/replay.rs
expression: "first_lxwp1(&replay.events()[0])"
---
Lxwp1 {
    product: None,
    serial: None,
    software_version: None,
    hardware_version: None,
    license: None,
}
