libs/updraft_replay/src/snapshots/updraft_replay__replay__tests__loads_the_representative_igc_recording.snap
---
source: libs/updraft_replay/src/replay.rs
expression: "payload_text(&events[0])"
---
$LXWP1,LX9070PF,ALP,9.54,38,*42
$GPRMC,100352.000,A,5049.36500,N,00611.40200,E,0.18898488120950324,161,040726,,,*33
$GPGGA,100352.000,5049.36500,N,00611.40200,E,1,9,,188.45546666666667,M,46.544533333333334,M,,*70
$PGRMZ,249.34383202099735,f,3*34
$PLXVS,25.1,,,76,*74
$LXWP0,,0,76,0.09,,,,,,,232.00000000000003,81.93*36
