libs/updraft_replay/src/snapshots/updraft_replay__replay__tests__maps_igc_navigation_warnings_to_invalid_fixes.snap
---
source: libs/updraft_replay/src/replay.rs
expression: "payload_text(&replay.events()[0])"
---
$GPRMC,134749.000,V,5200.00000,N,00700.00000,E,,,040726,,,*33
$GPGGA,134749.000,5200.00000,N,00700.00000,E,0,,,956,M,44,M,,*75
$PGRMZ,10000,f,1*18
